--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ rfidkeysPRODUCTION.cpp
 */.vscode/settings.json
 Software/Particle_SW/stationfirmware/target/*
 Software/Particle_SW/stationfirmware/.vscode/*
+.vscode/*
+Software/Facility_Database_SW/datalogging/.vscode/*
