--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Software/Particle_SW/stationfirmware/target/*
 Software/Particle_SW/stationfirmware/.vscode/*
 .vscode/*
 Software/Facility_Database_SW/datalogging/.vscode/*
+Software/Facility_Database_SW/datalogging/v1/OVLconfig.ini
